--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,5 @@
 * {
-  font-family: "Nunito", sans-serif;
-  font-optical-sizing: auto;
+  font-family: "Chakra Petch", sans-serif;
   font-weight: 400;
   font-style: normal;
 }
@@ -35,6 +34,8 @@ nav {
 
 .avatar {
   border-radius: 50%;
+  display: block;
+  margin: 0 auto;
 }
 
 span.cursor {
@@ -44,4 +45,17 @@ span.cursor {
   display: inline-block;
   margin-left: 3px;
   margin-bottom: -3px;
+}
+
+.account-links {
+  font-size: 1.2rem;
+}
+
+.container-xsm {
+  max-width: 700px;
+  margin: 0 auto;
+}
+
+h2 {
+  font-size: 2rem;
 }
