--- a/src/css/style.css
+++ b/src/css/style.css
@@ -59,3 +59,37 @@ span.cursor {
 h2 {
   font-size: 2rem;
 }
+
+h3 {
+  font-size: 1.5rem;
+}
+
+.img-container {
+  background-color: transparent;
+  padding: 4px;
+  border-radius: 16px;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.22);
+}
+
+
+img.project {
+  max-width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
+
+.text-small {
+  font-size: 0.95rem;
+}
+
+ul.tech-list {
+  list-style: none;
+  padding: 0;
+}
+
+ul.tech-list li {
+  font-family: "VT323", monospace;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 1.3rem;
+}
