--- a/src/css/style.css
+++ b/src/css/style.css
@@ -52,8 +52,9 @@ span.cursor {
 }
 
 .container-xsm {
-  max-width: 700px;
+  max-width: 724px;
   margin: 0 auto;
+  padding: 0 0.75rem;
 }
 
 h2 {
@@ -92,4 +93,23 @@ ul.tech-list li {
   font-weight: 400;
   font-style: normal;
   font-size: 1.3rem;
+}
+
+input,
+input::placeholder {
+  font-size: 0.9rem !important;
+}
+
+label.form-label {
+  font-size: 0.9rem !important;
+}
+
+.btn-primary {
+  background-color: rgba(0, 0, 0, 1);
+  border-color: black;
+}
+
+.btn-primary:hover {
+  background-color: rgba(0, 0, 0, 0.9);
+  border-color: black;
 }
